--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
+
 }
 
 .main-container {
     background: #f0f0f0;
     padding: 20px 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    margin-bottom: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    margin: 30px;
 }
 
 .settings-container h2 {
